# pb

./: .editorconfig  .gitignore  README.md  justfile  personalbot.py
memorybank/: 2025-11-15-17-14-09-practical-guide-analyzing-running-fit-files-with-fitdecode.md  2025-11-15-18-04-33-tempo-run-analysis-playbook.md  2025-11-15-18-24-51-estimating-lt2-hr-pace-and-power-from-a-tempo-run.md  2025-11-16-21-09-44-cardiac-drift-definition-and-measurement.md  2025-11-17-09-53-47-lunch-money-categories-emoji-vs-plaidmapped.md  2025-11-25-21-23-42-workflow-propagating-code-changes-across-the-agent-repository-fleet.md  2025-12-03-01-17-18-stony-brook-patient-portal-clinical-notes-download-process.md  2025-12-11-01-13-16-bot-fleet-management-propagating-diffs-across-similar-bots.md  2025-12-12-21-36-16-video-analysis-methodology-atlas-directed-deep-dives.md  2025-12-22-22-41-23-gemini-image-generation-api-gemini3proimagepreview.md
misc/: 25-11-05-wed-outdoor-running-hao-s-apple-watch.fit  25-11-06-thu-outdoor-running-hao-s-apple-watch.fit  25-11-07-fri-outdoor-running-hao-s-apple-watch.fit  25-11-08-sat-outdoor-running-hao-s-apple-watch.fit  25-11-09-sun-outdoor-running-hao-s-apple-watch.fit  25-11-12-wed-outdoor-running-hao-s-apple-watch.fit  25-11-13-thu-outdoor-running-hao-s-apple-watch.fit  25-11-14-fri-outdoor-running-hao-s-apple-watch.fit  25-11-15-sat-lunch-money-api-docs.md  25-11-15-sat-outdoor-running-hao-s-apple-watch.fit  25-11-16-sun-outdoor-running-hao-s-apple-watch.fit  25-11-17-mon-outdoor-running-hao-s-apple-watch.fit  25-11-18-tue-gemini-3-impl.md  25-11-18-tue-gemini-3.md  25-11-20-thu-outdoor-running-hao-s-apple-watch.fit  25-11-21-fri-outdoor-running-hao-s-apple-watch.fit  25-11-23-sun-outdoor-running-hao-s-apple-watch.fit  25-12-02-tue-landing-ai-api.md  (+15 more)
platform/: pyproject.toml
platform/src/: claudeagent.py  libpersonal.py  test_funcs.py
(+9 files in other folders)
